[package]
name = "elb-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
flate2 = "1"

anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
clap = { version = "4.0.22", features = ["derive"] }
