[package]
name = "elb-log-parser"
description = "Simple AWS ELB log parser which parses Classic LB and ALB logs into JSONs."
version = "0.2.7"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libelb-log-parser = { path = "../libelb-log-parser", version = "0.0.0" }

serde_json = "1"
walkdir = "2"
flate2 = "1"

anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.0.22", features = ["derive"] }
clap_complete = "4.5.33"
crossbeam-channel = "0.5.15"
