[package]
name = "libelb-log-parser"
description = "Simple AWS ELB log parser."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1"
regex-automata = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
